--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "https://jbrasko2.github.io/the-encyclopedia-of-peculiar-birds/",
+  "homepage": "https://jbrasko2.github.io/the-encyclopedia-of-peculiar-birds",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -e ./client",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
